# git2mind

./: .gitignore  LICENSE  README.md  git2mind.py  pyproject.toml  tria.py
src/: chunker.py  data_models.py  git_analyzer.py  parsers.py  readers.py  writers.py
